<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.game.GameFragment">

    <data>
        <variable
            name="gameViewModel"
            type="com.example.guessthenumber.screens.game.GameViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <EditText
            android:id="@+id/num_text"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/guess_text"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="#757171"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/is_it_correct"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/is_it_correct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/hint_in_game"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/time_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/num_text"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0:00"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/guess_remaining"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/guess_remaining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guess_left"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Space
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="96dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_end="120dp"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/is_it_correct_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#0A950A"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/in_game_button_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guess_remaining" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>